--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,7 @@ version: 2
 executorType: machine
 stages:
   build:
+    workdir: /home/circleci/electronic-wechat-deb
     steps:
       - type: checkout
 
