--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,19 @@ stages:
       - type: checkout
 
       - type: shell
+        name: Checkout Source Code
+        command: |
+          set -ex
+          wget https://github.com/geeeeeeeeek/electronic-wechat/archive/v2.0-rc1.tar.gz -O src.tar.gz
+          mkdir -p src
+          tar -zxvf src.tar.gz -C src --strip-components=1
+          cd src
+          npm install
+          npm run build:linux64
+
+          ls dist/electronic-wechat-linux-x64
+
+      - type: shell
         name: Build
         command: |
           ./build.sh
