--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,7 @@
 version: 2
 executorType: docker
 containerInfo:
-  - image: debian:8
+  - image: node:7.5
 stages:
   build:
     workdir: /home/circleci/electronic-wechat-deb
