--- a/circle.yml
+++ b/circle.yml
@@ -14,8 +14,8 @@ stages:
       - type: shell
         name: Deps
         command: |
-          sudo apt-get update
-          sudo apt-get --yes install imagemagick
+          apt-get update
+          apt-get --yes install imagemagick
 
       - type: shell
         name: Checkout Source Code
